# haive-agents

./: .gitignore  CLAUDE.md  CONSOLIDATION_COMPLETE.md  CURRENT_STATUS_2025.md  DOCUMENTATION_REORGANIZATION_PLAN.md  DYNAMIC_REACT_AGENT_SUMMARY.md  DYNAMIC_SUPERVISOR_COMPARISON.md  EXAMPLES_ORGANIZATION_PLAN.md  FINAL_COMPREHENSIVE_DOCUMENTATION.md  IMPROVEMENTS_SUMMARY.md  README.md  STRUCTURED_REACTION_ANALYSIS.md  TODO.md  build_docs.sh  bulk_fix.py  debug_multi_agent_routing.py  debug_planner_detailed.py  debug_planner_simple.py  debug_planner_test.py  debug_streaming_values.py  final_fix.py  fix_syntax_errors.py  fix_v2_methods.py  july27_dangling_analysis.json  list_examples.py  navigate_examples.py  organize_problem_files.py  pyproject.toml  pytest.ini  rebuild_docs.sh  requirements.txt  simple_test.py  system_requirements.txt  temp_fix_advanced.py  test_infinite_loop_standalone.py  test_lfs_integration.md  test_planner_debug.py  test_taskplan_simple.py
.trunk/: .gitignore  trunk.yaml
archives/: bulk_fix.py  debug_msgpack_focused.py  debug_msgpack_issue.py  debug_multi_agent_routing.py  debug_state_difference.py  debug_streaming_values.py  debug_supervisor_demo.py  debug_test.py  extract_all_recovered_files.sh  final_fix.py  full_workflow_output.txt  list_examples.py  minimal_test_agent.py  plan_and_execute_clean.py  plan_and_execute_real.py  plan_and_execute_sequence.py  plan_and_execute_simple.py  plan_execute_demo.py  plan_execute_simple.py  plan_execute_working.py  temp_fix_advanced.py  test_clean_plan_execute.py  test_dynamic_supervisor_simple.py  test_elegant_structure.py  test_plan_and_execute.py  test_real_plan_execute.py  test_real_plan_execute_proper.py  test_real_plan_execute_simple.py  test_real_plan_execute_working.py  visualize_plan_execute.py
docs/: AGENTIC_RAG_REFERENCE.md  AGENT_ARCHITECTURES.md  DOCUMENTATION_INDEX.md  MULTI_AGENT_COORDINATION_GUIDE.md  MultiAgentBase_Guide.md  PERSISTENCE_FIX_DOCUMENTATION.md  README.md  SELF_DISCOVER_PRODUCTION_GUIDE.md  SUPERVISOR_AND_REACT_AGENT_OVERVIEW.md  ValidationNodeV2_Pattern.md  enhanced_agent_pattern.md  enhanced_agent_refactoring_plan.md  enhanced_agents_summary.md  react_agent_v3_comprehensive.py  requirements.txt  simple_agent_v3_structured_output.py  supervisor_comparison.md
examples/: GALLERY_HEADER.rst  README.md  agent_with_structured_output.py  basic_agent_test.py  branching_structured_output_demo.py  consistent_v3_v4_demo.py  debug_msgpack_focused.py  debug_msgpack_issue.py  debug_multi_agent_v4.py  debug_output.txt  debug_state_difference.py  debug_supervisor_demo.py  debug_test.py  dynamic_activation_advanced_example.py  dynamic_activation_basic_example.py  dynamic_react_agent_example.py  dynamic_supervisor_demo.py  dynamic_supervisor_example.py  enhanced_agent_pattern_demo.py  enhanced_memory_retriever_demo.py  enhanced_multi_agent_v4_example.py  final_v3_v4_working_demo.py  full_supervisor_demo.py  generalized_hooks_example.py  minimal_test_agent.py  multi_agent_example.py  multi_agent_structured_output_demo.py  (+42 more)
tests/: README.md  (+104 more)
(+4006 files in other folders)
