[tool.poetry]
name = "haive-agents"
version = "0.1.0"
description = "haive-agents for Haive framework"
authors = ["pr1m8 <william.astley@algebraicwealth.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "haive", from = "src" }]
[tool.poetry.dependencies]
python = ">=3.12,<3.13"
haive-core = { path = '../haive-core', develop = true }
pydantic = "^2.10.6"
langchain = "^0.3.20"
langchain-core = "^0.3.44"
langgraph = "^0.3.5"
langchain-community = "^0.3.26"
langchain-google-vertexai = "^2.0.27"
langchain-huggingface = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
mock = "^5.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
